package creational.factory_method;

public enum PizzaType {
  HAISAN, BO, PHOMAI
}
